# chatbot-app-go

./: .gitignore  README.md  app.py  app.yaml  go.mod  go.sum  main.go  requirements.txt
client/: package.json
client/src/: App.js  PremiumChatBot.js  car.js  index.css
rust-chat-server/: Cargo.toml
rust-chat-server/src/: main.rs
test/: test_app.py
