[package]
name = "llm-chat-server"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units to increase optimization
panic = 'abort'     # Remove panic unwinding to reduce size
strip = true        # Strip symbols from binary

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.9"
log = "0.4"
dotenv = "0.15"
futures = "0.3"